# rip

./: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
rip/: Cargo.toml
rip/examples/: client.rs  empty.rs  server.rs
rip/src/: def.rs  lib.rs
rip_audio/: Cargo.toml
rip_audio/examples/: audio.rs  blocking.rs  example.rs  non.rs
rip_audio/src/: audio_ctx.rs  builder.rs  def.rs  error.rs  flow.rs  lib.rs  stream.rs
rip_core/: Cargo.toml
rip_core/src/: builder.rs  codec.rs  lib.rs
rip_net/: Cargo.toml
rip_net/examples/: async.rs  client.rs  server.rs
rip_net/src/: codec.rs  error.rs  lib.rs  peer.rs  socket.rs  tcp.rs
samples/: Cargo.toml
samples/src/: main.rs
vo_core/: Cargo.toml
