[package]
name = "rip"
version = "0.1.0"
authors = ["Andrew Chupin <artas.96@mail.ru>"]
edition = "2018"

[dependencies]
rip_audio = { path = "../rip_audio" }
rip_net = { path = "../rip_net" }
rip_core = { path = "../rip_core" }
opus = { version = "0.2.1" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }

[lib]
name = "rip"
path = "src/lib.rs"
